--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<ul>
 				<li><a href="#">ホーム</a></li>
 				<li><a href="#">メニュー一覧</a></li>
-				<li><a href="#">ご予約はこちら</a></li>
+				<li><a href="https://sinplemag.github.io/contact2/?#">ご予約はこちら</a></li>
 			</ul>
 		</nav>
 
@@ -59,7 +59,7 @@
 	<!--ライトはじまり-->
 	<div id="right">
 		<ul>
-			<li class="box-shadow"><a id="contact" href="#">ご予約・お問い合わせ</a></li>
+			<li class="box-shadow"><a id="contact" href="https://sinplemag.github.io/contact2/?#">ご予約・お問い合わせ</a></li>
 			<li class="box-shadow"><a id="blog" href="#">スタイリストブログ</a></li>
 		</ul>
 	</div>
