--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
 		<nav>
 			<ul>
-				<li><a href="#">ホーム</a></li>
-				<li><a href="#">メニュー一覧</a></li>
+				<li><a href="https://sinplemag.github.io/nande/">ホーム</a></li>
+				<li><a href="https://sinplemag.github.io/menu2/">メニュー一覧</a></li>
 				<li><a href="https://sinplemag.github.io/contact2/?#">ご予約はこちら</a></li>
 			</ul>
 		</nav>
