--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<ul>
 				<li><a href="https://sinplemag.github.io/nande/">ホーム</a></li>
 				<li><a href="https://sinplemag.github.io/menu2/">メニュー一覧</a></li>
-				<li><a href="https://sinplemag.github.io/contact2/?#">ご予約はこちら</a></li>
+				<li><a href="https://sinplemag.github.io/contact2/">ご予約はこちら</a></li>
 			</ul>
 		</nav>
 
