--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	<!--ライトはじまり-->
 	<div id="right">
 		<ul>
-			<li class="box-shadow"><a id="contact" href="https://sinplemag.github.io/contact2/?#">ご予約・お問い合わせ</a></li>
+			<li class="box-shadow"><a id="contact" href="https://sinplemag.github.io/contact2/">ご予約・お問い合わせ</a></li>
 			<li class="box-shadow"><a id="blog" href="#">スタイリストブログ</a></li>
 		</ul>
 	</div>
